# Objective-Commander

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
scripts/: build.ps1  config.ps1  run.ps1
src/: CMakeLists.txt  main.cpp
src/include/: command.h
